--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         path: ${{ github.workspace }}/build/llvm-project
         key: ${{ runner.os }}-${{ steps.llvm-revision.outputs.revision }}
-    - if: steps.llvm-build.outputs.cache-hit == 'true'
+    - if: steps.llvm-build.outputs.cache-hit != 'true'
       run: |
         cmake -B ${{ github.workspace }}/build/llvm-project -D CMAKE_BUILD_TYPE=Release -S ${{ github.workspace }}/third_party/llvm-project/llvm
         cmake --build ${{ github.workspace }}/build/llvm-project --config Release --target FileCheck
@@ -39,7 +39,6 @@ jobs:
     - run: |
         curl -sL https://github.com/llvm/llvm-project/releases/download/llvmorg-12.0.1/clang+llvm-12.0.1-x86_64-linux-gnu-ubuntu-16.04.tar.xz -o ${{ github.workspace }}/third_party/clang+llvm-12.0.1-x86_64-linux-gnu-ubuntu-16.04.tar.xz 
         tar Jxf ${{ github.workspace }}/third_party/clang+llvm-12.0.1-x86_64-linux-gnu-ubuntu-16.04.tar.xz -C ${{ github.workspace }}/third_party --strip-components 1
-        find ${{ github.workspace }}/build/ -name FileCheck
 
     - name: Configure CMake
       run: cmake -B ${{ github.workspace }}/build -D CMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -D LLVM_DIR=${{ github.workspace }}/third_party/lib/cmake/llvm -D Clang_DIR=${{ github.workspace }}/third_party/lib/cmake/clang -D FILECHECK_EXECUTABLE=${{ github.workspace }}/build/llvm-project/bin/FileCheck -D LIT_EXECUTABLE=${{ github.workspace }}/third_party/llvm-project/llvm/utils/lit/lit.py
