add a test case that uses compilation database

--- a/Tests/lit.cfg
+++ b/Tests/lit.cfg
@@ -39,7 +39,7 @@ if not use_lit_shell:
 
 config.test_format = lit.formats.ShTest(execute_external = False)
 
-config.suffixes = ['.hh']
+config.suffixes = ['.hh', '.cc']
 config.excludes = ['CMakeLists.txt']
 
 config.test_source_root = os.path.join(ids_src_root, 'Tests')
