[gha] add a job to build and test windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
     - id: llvm-revision
       run: echo llvm_revision=$(git -C ${{ github.workspace }}/third_party/llvm-project rev-parse HEAD) >> ${GITHUB_ENV}
 
-    - uses: hendrikmuhs/ccache-action@4cb35b2ff44ce57e1f5f5221e26bd8fefcfe41d0 # main as of 2024-01-21
+    - uses: hendrikmuhs/ccache-action@v1.2.17
       with:
         max-size: 10M
         key: ${{ runner.os }}-${{ env.llvm_revision }}
@@ -74,4 +74,71 @@ jobs:
     - name: Test
       run: >
         cmake --build ${{github.workspace}}/build                               \
+              --target check-ids
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Checkout LLVM
+      uses: actions/checkout@v4
+      with:
+        repository: llvm/llvm-project
+        ref: llvmorg-${{ env.LLVM_VERSION }}
+        path: third_party/llvm-project
+        fetch-depth: 1
+
+    - id: llvm-revision
+      run: echo llvm_revision=$(git -C ${{ github.workspace }}/third_party/llvm-project rev-parse HEAD) >> ${GITHUB_ENV}
+
+    - uses: hendrikmuhs/ccache-action@v1.2.17
+      with:
+        key: ${{ runner.os }}-${{ env.llvm_revision }}
+        variant: sccache
+
+    - name: Setup VSDevEnv
+      if: runner.os == 'Windows'
+      uses: compnerd/gha-setup-vsdevenv@v6
+      with:
+        components: "Microsoft.VisualStudio.Component.VC.Tools.x86.x64;Microsoft.VisualStudio.Workload.NativeDesktop"
+
+    - name: Configure LLVM
+      run: |
+        cmake -B ${{ github.workspace }}/build/llvm-project                     `
+              -D LLVM_ENABLE_PROJECTS="lld;clang"                               `
+              -D LLVM_TARGETS_TO_BUILD="host"                                   `
+              -D CMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}                         `
+              -D CMAKE_C_COMPILER_LAUNCHER=sccache                              `
+              -D CMAKE_CXX_COMPILER_LAUNCHER=sccache                            `
+              -S ${{ github.workspace }}/third_party/llvm-project/llvm          `
+              -G Ninja
+
+    - name: Build LLVM
+      run: |
+        cmake --build ${{ github.workspace }}/build/llvm-project                `
+              --config ${{ env.BUILD_TYPE }}
+
+    - name: Configure IDS
+      run: |
+        cmake -B ${{ github.workspace }}/build                                                          `
+              -D CMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}                                                 `
+              -D CMAKE_C_COMPILER=${{ github.workspace }}/build/llvm-project/bin/clang.exe              `
+              -D CMAKE_CXX_COMPILER=${{ github.workspace }}/build/llvm-project/bin/clang++.exe          `
+              -D LLVM_DIR=${{ github.workspace }}/build/llvm-project/lib/cmake/llvm                     `
+              -D Clang_DIR=${{ github.workspace }}/build/llvm-project/lib/cmake/clang                   `
+              -D FILECHECK_EXECUTABLE=${{ github.workspace }}/build/llvm-project/bin/FileCheck          `
+              -D LIT_EXECUTABLE=${{ github.workspace }}/third_party/llvm-project/llvm/utils/lit/lit.py  `
+              -D CMAKE_EXE_LINKER_FLAGS=-fuse-ld=lld                                                    `
+              -G Ninja
+
+    - name: Build IDS
+      run: |
+        cmake --build ${{ github.workspace }}/build                             `
+              --config ${{ env.BUILD_TYPE }}
+
+    - name: Test IDS
+      run: |
+        cmake --build ${{github.workspace}}/build                               `
               --target check-ids
