--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,9 @@ jobs:
         fetch-depth: 1
 
     - id: llvm-revision
-      run: echo llvm_revision=$(git -C ${{ github.workspace }}/third_party/llvm-project rev-parse HEAD) >> ${GITHUB_ENV}
+      run: |
+        $llvm_revision = git -C ${{ github.workspace }}/third_party/llvm-project rev-parse HEAD
+        echo "llvm_revision=$llvm_revision" >> $env:GITHUB_ENV
 
     - uses: hendrikmuhs/ccache-action@v1.2.17
       with:
