[gha] rename build job to build-ubuntu

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ env:
   SCCACHE_DIRECT: yes
 
 jobs:
-  build:
+  build-ubuntu:
     # TODO(compnerd) convert this to a build matrix
     runs-on: ubuntu-latest
 
